# passenger-flow-forecasting

./: .gitignore  LICENSE  README.md  analysis.ipynb  eventsize.ipynb  forecasting-results.ipynb  generate-results.ipynb  pyproject.toml
data/: events.csv  stations.csv  venue_capacity.csv
models/: encoder.py  hybrid.py  lr.py  mlp.py  sarima.py  stgan.py
train/: basic-linear-regression.ipynb  basic-mlp.ipynb  hybrid-linear-regression.ipynb  hybrid-mlp.ipynb  sarima.ipynb  sarimax.ipynb  stgan.ipynb
util/: dataset.py  event.py  graph.py  jupyter.py  plotstyle.py  saveplot.py  transform.py
