[tool.poetry]
name = "passenger flow forecasting"
version = "0.1.0"
description = ""
authors = ["Jeffrey Bakker <jeffrey.bakker@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.0.1"
tqdm = "^4.65.0"
parallel-pandas = "^0.5.0"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
statsmodels = "^0.14.0"
networkx = "^3.1"
dask = "^2023.5.1"
scikit-learn = "^1.2.2"
pmdarima = "^2.0.3"
torch-geometric = "^2.3.1"
dtw-python = "^1.3.0"
wandb = "^0.15.4"
openpyxl = "^3.1.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
